[project]
name = "samplegeneticalgorithm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "Capitals @ file://./Capitals",
    "Genetic @ file://./Genetic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true