[project]
name = "samplegeneticalgorithm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tools.hatch.build]
packages = [
    "General_Utils",
    "Genetic",
    "Capitals"
]

[tool.hatch.metadata]
allow-direct-references = true