[project]
name = "General_Utils"
version = "0.1.0"
description = "Genetic algorithm utilities and data structures"
requires-python = ">=3.12"
dependencies = [
    "Capitals @ file:///C:/Users/fresc/Developer/SampleGeneticAlgorithm/Capitals"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["General_Utils"]
